day11 first part

--- a/day9-containers.ipynb
+++ b/day9-containers.ipynb
@@ -206,6 +206,94 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "43b08f22",
+   "metadata": {},
+   "source": [
+    "### Modify Element"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f010802a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 2, 3, 0]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numbers = [1, 2, 3, 4]\n",
+    "# numbers = [4, 2, 3, 4]\n",
+    "numbers[0] = 4\n",
+    "numbers[-1] = 0\n",
+    "numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b1f26a9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 2, 3, 4]\n",
+    "numbers[0] *= 5\n",
+    "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8530a1d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# numbers = [2, 4, 6, 8]\n",
+    "numbers = [1, 2, 3, 4]\n",
+    "\n",
+    "# list comprehension\n",
+    "# numbers = [num * 2 for num in numbers]\n",
+    "\n",
+    "# for loop\n",
+    "for index, num in enumerate(numbers):\n",
+    "    numbers[index] = num * 2\n",
+    "    \n",
+    "for index, _ in enumerate(numbers):\n",
+    "    numbers[index] *= 2\n",
+    "    \n",
+    "for index in range(len(numbers)):\n",
+    "    numbers[index] *= 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d11f17b0",
@@ -368,12 +456,467 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3749f841",
+   "metadata": {},
+   "source": [
+    "*list (list extractor)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "9232dc70",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [1, 2, 3, 4]\n",
+    "print(*numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7089bb2f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'OBCT'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# [0, 0, 0, ]\n",
+    "char1 = 'OB'\n",
+    "char2 = 'CT'\n",
+    "\n",
+    "char1 + char2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "9638d4cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1 =[1, 2]\n",
+    "l2 =[3, 4]\n",
+    "\n",
+    "l1 + l2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "cc9acc1c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A']"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'A' * 10\n",
+    "['A'] * 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ddec9510",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "zeroes = [0] * 100\n",
+    "print(zeroes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6abd2af2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 1, 2, 1, 2, 1, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "l1 =[1, 2]\n",
+    "print(l1 * 4) # l1 + l1 + l1 + l1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "309d2ace",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "65"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ord('A') # 1000001"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "d5ac9ef7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A', 'A']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(['A'] * ord('A'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95eda593",
+   "metadata": {},
+   "source": [
+    "reverse()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "b01bd73d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 1, 3, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [5, 3, 1, 2]\n",
+    "numbers.reverse()\n",
+    "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54575fdd",
+   "metadata": {},
+   "source": [
+    "sort()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eeba0980",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [5, 3, 1, 2]\n",
+    "numbers.sort(reverse=True)\n",
+    "print(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "4613d135",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'<' not supported between instances of 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[43]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m l = [\u001b[33m'\u001b[39m\u001b[33mA\u001b[39m\u001b[33m'\u001b[39m, \u001b[32m1\u001b[39m, -\u001b[32m5\u001b[39m, \u001b[38;5;28;01mFalse\u001b[39;00m]\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[43ml\u001b[49m\u001b[43m.\u001b[49m\u001b[43msort\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m l\n",
+      "\u001b[31mTypeError\u001b[39m: '<' not supported between instances of 'int' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "l = ['A', 1, -5, False]\n",
+    "l.sort()\n",
+    "l\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "a722f0e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Appeal', 'Apple', 'apple', 'application']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l = ['Apple', 'Appeal', 'apple', 'application'] \n",
+    "# lexicographically\n",
+    "l.sort()\n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b2ec5879",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(65, 97)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ord('A'), ord('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "83234a95",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def my_function(numbers):\n",
+    "    return numbers[1:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "099e2e15",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['Kam', 10, 0], ['North', 55, 3], ['Cheetah', 55, 7]]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores = [['Cheetah', 55, 7], ['North', 55, 3], ['Kam', 10, 0]]\n",
+    "scores.sort(key=my_function)\n",
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f51ca1a2",
+   "metadata": {},
+   "source": [
+    "not in/in"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "22e2b3bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "l = [1, 2, 1, 1, 4, [3]]\n",
+    "print(1 in l)\n",
+    "print([3] in l)\n",
+    "print(3 in l)\n",
+    "print([1, 2] in l)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9acc817c",
+   "metadata": {},
+   "source": [
+    "### map"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e8470a4",
+   "metadata": {},
+   "source": [
+    "Iterable -- list, string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "8e5f326e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False, True, True, True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [0, 1, 2 ,3]\n",
+    "print(list(map(bool, my_list))) # [int(1.5), int(2.5), int(3.4)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1230b8b0",
+   "metadata": {},
+   "source": [
+    "INPUT:\n",
+    "2 3 4 5\n",
+    "\n",
+    "YOU WANT THIS IN CODE:\n",
+    "[2, 3, 4, 5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "45c18542",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = input().split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "77c063e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 4, 5]"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(map(int, numbers))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "963c2ba3",
+   "metadata": {},
+   "source": [
+    "ultimately,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8f53a0cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numbers = list(map(int, input().split()))"
+   ]
   }
  ],
  "metadata": {
