Fix problem description

--- a/Python2/Python2_HSUTCC_Session1.ipynb
+++ b/Python2/Python2_HSUTCC_Session1.ipynb
@@ -2160,7 +2160,7 @@
         "id": "wJmrM2MZqJgM"
       },
       "source": [
-        "9. Write a function that accepts a list of tuples containing the name of the student and their score, sort them by the score from h."
+        "9. Write a function that accepts a list of tuples containing the name of the student and their score, sort them by the score from high to low."
       ]
     },
     {
