Add session 1 deadline

--- a/Python2/Python2_HSUTCC_Session1.ipynb
+++ b/Python2/Python2_HSUTCC_Session1.ipynb
@@ -1972,7 +1972,7 @@
         "id": "wCXR7Tq7qJgL"
       },
       "source": [
-        "# Tasks"
+        "# Tasks (Deadline 12 November 2025)"
       ]
     },
     {
